--- a/Index.html
+++ b/Index.html
@@ -13,14 +13,45 @@
 
 
 
-
-
 <body>
-    
+    <h1>Crystals Collector!</h1>
+    <div class="instructions">
+<p>You will be given a random number at the start of the game.</p>
+<br>
+<p>There are four crystals below. By clicking on a crystal you will add a specific amount of points to your total score.</p>
+<br>
+<p>You win the game by matching your total score to the random number, you lose the game if your total score goes above the random number.</p>
+<br>
+<p>The value of each crystal is hidden until you click on it.</p>
+<br>
+<p>Each time the game starts, the game will change the value of the crystals.</p>
+
+ </div>
+
+<div class="Gem-score">
+
+</div>
+
+<div class="win">
 
 
+</div>
+<div class="gems">
 
+
+</div>
+
+<div class="Your-score">
+<p>Your Total Score Is:</p>
+</div>
+
+<div class="score">
+
+</div>
 
 
 </body>
+
+
+
 </html>
